# Parallel_Heptics

./: .gitignore  Analist_kinematics.ipynb  README.md  README_raw.txt  backend.py  backend_before_removing_prev_values.py  color_tracker.py  configeretion_test.py  configuration.py  configuration_og.csv  configuretion.py  consts.py  frontend_pygame.py  haptic_mapping.py  hello.py  list_ports.py  moderator_control.py  motor_cli.py  motor_controller.py  movement_simulation.ipynb  plot_analyzer.ipynb  pygame_frontend.py  pyproject.toml  run_pygame.bat  structures.py  test_cameras.py  test_math.py  test_motors_network.py  test_profile
analysis/: 2afc_constant_stimuli_psychophysics_analysis.ipynb  Analist_kinematics.ipynb  group_comparisons.py  motor_response_analyzer_fullhaber.ipynb  movement_simulation.ipynb  movement_strategy_simulation.ipynb  plot_analyzer.ipynb  scope_plots.py
esp32_serial_bridge/: README.md  build.bat  build_msvc.bat
kinematics/: __init__.py  unified_ik_starter.py
protocols/: participant_1.csv  participant_4.csv  participant_5.csv  participant_6.csv  participant_7.csv  participant_8.csv
tests/: conftest.py  test_IK.py  test_backend_cli_config.py  test_backend_motor_calculation.py  test_backend_resume.py  test_backend_shutdown.py  test_camera_index.ipynb  test_cameras.py  test_color_vision.py  test_fingerDetection.py  test_frontend_audio.py  test_frontend_pygame_udp.py  test_group_comparisons.py  test_math.py  test_mediapipe_vision_smoothing.py  test_moderator_control.py  test_motors_network.py  test_movement_area.py  test_scope_plots.py  (+3 more)
(+82 files in other folders)
