[project]
name = "parallel-demo2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe==0.10.14",
    "opencv-python>=4.10.0.84",
    "opencv-python-headless>=4.10.0.84",
    "pydantic>=2.9.2",
    "pygame>=2.6.1",
    "pyserial>=3.5",
    "keyboard>=0.13.5",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ruff>=0.7.4",
]
